Added Products Controller, Cart, Product Detail

--- a/InternationalOnlineShopping/Views/Admin/_AdminLayout.cshtml
+++ b/InternationalOnlineShopping/Views/Admin/_AdminLayout.cshtml
@@ -43,7 +43,7 @@
         </div>
 
         <div class="micCont">
-            @Html.Partial("_AdminMenu")
+            @*@Html.Partial("_AdminMenu")*@
             @RenderBody()
         </div>
     </div>
