--- a/InternationalOnlineShopping/Views/Products/Index.cshtml
+++ b/InternationalOnlineShopping/Views/Products/Index.cshtml
@@ -11,13 +11,13 @@
 {
     <div>
         <h1 style="float:left;"> Welcome <a href="#">@Session["MemberName"]</a></h1>
-        <h4> <a href="/Home" style="float:right;">Logout</a></h4>
+        <h4> <a href="/Register/Logout" style="float:right;">Logout</a></h4>
     </div>
 }
 
-    <p style="margin-top:80px;">
-        @Html.ActionLink("Add New Product", "Create")
-    </p>
+<p style="margin-top:80px;">
+    @Html.ActionLink("Add New Product", "Create")
+</p>
 <table class="table table-striped table-condensed">
     <tr>
         <th>
@@ -38,7 +38,7 @@
         <th>Actions</th>
     </tr>
 
-    @foreach(var item in Model)
+    @foreach (var item in Model)
     {
         <tr>
             <td>
@@ -64,3 +64,24 @@
     }
 </table>
 
+@section scripts{
+    <script>
+        $(function () {
+            let successMessage = '@TempData["SuccessMessage"]'
+            if (successMessage)
+            {
+                alertify.success(successMessage);
+            }
+
+
+
+
+    });
+
+
+
+
+
+
+    </script>
+}
