Added design in Checkout Added Card model in ShippingDetail model

--- a/InternationalOnlineShopping/Views/Admin/_AdminLayout.cshtml
+++ b/InternationalOnlineShopping/Views/Admin/_AdminLayout.cshtml
@@ -35,7 +35,7 @@
             <div class="logo"><a href="/">Logo</a></div>
             <div class="header-right">
                 <span>
-                    Welcome @(Request.Cookies["MemberName"] != null ? Request.Cookies["MemberName"].Value : "")  |  <a href="/account/logout"> Log Out</a>
+                    Welcome @(Request.Cookies["MemberName"] != null ? Request.Cookies["MemberName"].Value : "")  |  <a href="/Register/Logout"> Log Out</a>
                 </span>
 
 
