--- a/InternationalOnlineShopping/Views/Shopping/CheckOut.cshtml
+++ b/InternationalOnlineShopping/Views/Shopping/CheckOut.cshtml
@@ -22,31 +22,36 @@
             <!-- Start servicesRight-->
             <div class="servicesRight1">
                 @if(Model.Count() > 0)
-                {
-                    <div style="background-color: white;  padding: 20px;">
-                        <b>You have following @Model.Count() items in your cart</b>
-                        <br /><br />
-                        @foreach(var item in Model)
-                        {
-                            <h3><a title="View Product Detail" href="/search/ProductDetail?pId=@item.ProductId"> <b> @item.ProductName</b>,  </a> <span>Price : </span><b>@item.Price</b></h3>
-                        }
-                    </div>
-                }
-                else
-                {
-                    <div class="tabContent" id="tab3">
-                        <div class="clearfix">
-                            <div class="detailservicesBox clearfix">
-                                <div style="background-color: #fff; text-align: center; padding: 40% 0; ">
-                                    <h2>No Records found</h2>
-                                </div>
-                            </div>
+    {
+            <div style="background-color: white;  padding: 20px;">
+                <b>You have following @Model.Count() items in your cart</b>
+                <br /><br />
+                @foreach(var item in Model)
+    {
+            <h3><a title="View Product Detail" href="/search/ProductDetail?pId=@item.ProductId"> <b> @item.ProductName</b>,  </a> <span>Price : </span><b>@item.Price</b></h3>
+}
+            </div>
+}
+else
+{
+            <div class="tabContent" id="tab3">
+                <div class="clearfix">
+                    <div class="detailservicesBox clearfix">
+                        <div style="background-color: #fff; text-align: center; padding: 40% 0; ">
+                            <h2>No Records found</h2>
                         </div>
                     </div>
-                }
+                </div>
+            </div>
+}
                 <br />
                 <br />
-                <h3 style="font-weight: bold;color: brown;"> Total Amount to Pay : @Model.Sum(i => i.Price)</h3>
+                <h3 style="font-weight: bold;color: brown;"> Total Amount : @Model.Sum(i => i.Price)</h3>
+
+                <h3 style="font-weight: bold;color: brown;"> Tax :@Model.Sum(i => i.Price * (decimal)0.07)</h3>
+                <h3 style="font-weight: bold;color: brown;"> Total Amount to Pay :@Model.Sum(i => i.Price * (decimal)1.07)</h3>
+
+
                 @Html.Partial("_ShippingAddress",new InternationalOnlineShopping.Models.ShippingDetail())
             </div>
         </div>
